fixes to header and leaflet watermark visibility

--- a/recommender-front/src/assets/style.css
+++ b/recommender-front/src/assets/style.css
@@ -15,7 +15,7 @@ body {
 
 #map {
   width: 100vw;
-  height: calc(100vh);
+  height: calc(79vh);
   /* Makes sure leaflet copyright is shown*/
 }
 
